# Eidon

./: .coveragerc  .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.demo-venv/: pyvenv.cfg
.github/workflows/: ci.yml
.streamlit/: config.toml
data/demo/: notifications.json  projects.json  risks.json  sprint.json
src/eidon/: __init__.py  __main__.py  cli.py  config.py  demo_launch.py  demo_web.py  errors.py
src/eidon/commands/: __init__.py  config_cmd.py  hello.py  init_cmd.py
src/eidon/data/demo/: arts.json  features.json  inbox.json  portfolio.json  projects.json  risks.json  sprints.json
tests/: test_argparse_errors.py  test_cli.py  test_cli_errors.py  test_cli_help.py  test_cli_version.py  test_config.py  test_config_show.py  test_format_config.py  test_format_hello.py  test_init_scaffolder.py  test_logging.py
