[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eidon"
version = "0.1.2"
description = "Eidon CLI and framework"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Akshay Dasari" }]
dependencies = []

[project.scripts]
eidon = "eidon.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/eidon"]

[tool.hatch.build.targets.sdist]
include = ["src/eidon", "tests", "README.md", "pyproject.toml", "LICENSE"]

[tool.hatch.build]
include = [
  "src/eidon/**.py",
  "src/eidon/data/demo/*.json"
]